<resources>
    <string name="app_name">KantinKu</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali!</string>
    <string name="masuk_ke_akun_untuk_melanjutkan">Masuk ke akun untuk melanjutkan</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="show_profile">Show Profile</string>
    <string name="riwayat">Riwayat</string>
</resources>